# ChangeLog for dev-embedded/phidget
# Copyright 1999-2009 Nathan Brink; Distributed under the GPL v2
# $Header: $

  11 May 2009; Nathan Phillip Brink <ohnobinki@ohnopublishing.net>
  phidget-2.1.5.20090105.ebuild, phidget-2.1.6.20090430.ebuild:
  Restructured ebuilds with help from chithead and hwoarang on
  #gentoo-sunrise.

  10 May 2009; Nathan Phillip Brink <ohnobinki@ohnopublishing.net>
  phidget-2.1.5.20090105.ebuild, phidget-2.1.6.20090430.ebuild:
  Edited ebuilds to use PATCHES variable.

  10 May 2009; Nathan Phillip Brink <ohnobinki@ohnopublishing.net>
  metadata.xml:
  Reset herd to maintainer-wanted.

  10 May 2009; Nathan Phillip Brink <ohnobinki@ohnopublishing.net>
  phidget-2.1.5.20090105.ebuild:
  Forgot to propagate all changes to old version.

  10 May 2009; Nathan Phillip Brink <ohnobinki@ohnopublishing.net>
  files/phidget21-crosscompile.patch, -phidget-2.1.4.20080924.ebuild,
  files/phidget21-java.patch, -phidget-2.1.5.20081023.ebuild,
  files/phidget21-libdir.patch, phidget-2.1.5.20090105.ebuild,
  -files/phidget21-2.1.5.20090105-crosscompile.patch,
  phidget-2.1.6.20090430.ebuild:
  Removed old versions and patch, fixed ebuild syntax, commented on each
  patch's function.

*phidget-2.1.5.20090430 (09 April 2009)

  09 May 2009; Nathan Phillip Brink <ohnobinki@ohnopublishing.net>
  phidget-2.1.4.20080924.ebuild, phidget-2.1.5.20081023.ebuild,
  phidget-2.1.5.20090105.ebuild, +phidget-2.1.6.20090430.ebuild, +metadata.xml:
  Version bump, added metadata.xml, fixed ChangeLog somewhat, fixed licenses, added IUSE,
  added quoting.

  06 Jan 2009; Nathan Phillip Brink <ohnobinki@ohnopublishing.net> +phidget-2.1.5.20090105.ebuild, +files/phidget21-2.1.5.20090105-crosscompile.patch, phidget-2.1.4.20080924.ebuild, phidget-2.1.5.20081023.ebuild
  Bumped to new version - needed to create a new files/phidget-crosscompile.patch for this version because the Makefile changed.