@@ -3,7 +3,9 @@ AUX phidget21-java.patch 716 RMD160 7fd30e15aa9b89d7395c74cbf8b413f2aabff795 SHA
 AUX phidget21-libdir.patch 559 RMD160 133c0473c42003e00d90e2c60af5e94dd91d8b09 SHA1 fd5a67307f08a8ca1f9b751114d0bc3aff3daae5 SHA256 f17604ededb52a5dd1ef4e71c25d8ccb09bb5ecb15bee1b9c0cc38ce19e01072
 DIST Phidgetlinux_2.1.5.20090105.tar.gz 316490 RMD160 0c0088eee842b7b4b723867c08964557c665b9aa SHA1 484fa7c170e412e9513d5f08e883a5efd9a7c366 SHA256 bfaaaf2aa21c854b2f0305ed6b55605d336b6b890eedf40ead0e17b419b7ac33
 DIST Phidgetlinux_2.1.6.20090430.tar.gz 342985 RMD160 a45e335c4672e918152537cd771bcd4b21a85ddf SHA1 60fadd7ba15342b2ad6c58b19d659532fe963513 SHA256 b1cf06ecae292c2b201c30878fa2e89c2251d8a0b994a9227870a7ce52dc2605
-EBUILD phidget-2.1.5.20090105.ebuild 1672 RMD160 9f2cffc055a086710fa824d9972ddbfb97c9f513 SHA1 3810a2b7a60e22198f12afea9e049bb468320635 SHA256 e4ffa6bc1fb64bbe5d9d418fb86ab334f32d7c0b31b6e68677e27f0e86ba02fb
-EBUILD phidget-2.1.6.20090430.ebuild 1672 RMD160 9f2cffc055a086710fa824d9972ddbfb97c9f513 SHA1 3810a2b7a60e22198f12afea9e049bb468320635 SHA256 e4ffa6bc1fb64bbe5d9d418fb86ab334f32d7c0b31b6e68677e27f0e86ba02fb
-MISC ChangeLog 2668 RMD160 6a4643720175649408a16437a2a1acb0274c35fa SHA1 3905661c73cdf4d9a8bd79b7f36a55a4274c19f4 SHA256 8a0dc9a70b37ddccc5a30b507ee523474c00733078376c5af4bd022ac31036a2
+DIST phidget21jar_2.1.5.20090105.zip 40775 RMD160 3c919b8b39163e2d4723ea7a9e50c1c974bdf349 SHA1 15a8bc192144fdbac2e69b3be26c8c7cc1a810bb SHA256 00289f31e8d4b94b8498e07e01feb54b2b896c15a0ee026d51d95eaf62b3c7be
+DIST phidget21jar_2.1.6.20090430.zip 40828 RMD160 beabfd38a7d10f64a8c2b5eeb1ecefbcaeef283f SHA1 7759eae57ed3d8c0b0529d2b21cc566e0bbfe93e SHA256 d9302fb72bb1f11d7473346c6ac30efcf1fe7ea8b89a05c0405b0e6c3880d134
+EBUILD phidget-2.1.5.20090105.ebuild 1807 RMD160 d1da86c4db44704a080f65d4ce7cbd4be47ec7f7 SHA1 927e46015eb9c1078f989d45daefb93e8c34d3c6 SHA256 d2834ed52b8ce0f593105efd97679e81b9cd136f6b0be89dcbc9381a8ceb68d8
+EBUILD phidget-2.1.6.20090430.ebuild 1807 RMD160 d1da86c4db44704a080f65d4ce7cbd4be47ec7f7 SHA1 927e46015eb9c1078f989d45daefb93e8c34d3c6 SHA256 d2834ed52b8ce0f593105efd97679e81b9cd136f6b0be89dcbc9381a8ceb68d8
+MISC ChangeLog 2856 RMD160 22aa2aaed311c94c66b841cf103032edc846262f SHA1 da0adf816b69fc7d83cb29cf7393d480ddd426ec SHA256 8ea5b5adf682620d2d22f24710927dc213198650fb96e3660925638d8e37704c
 MISC metadata.xml 172 RMD160 ac9d8165526474ed01605b242677b133677d627e SHA1 379fab1397357de050c74be1cbbb2da37ee3fcdd SHA256 74bc726733e7fd45be5b7a40fe34b62f1502551d6ee5797e65fc75522ead5972
